nginx and php-fpm config files

--- a/composer.json
+++ b/composer.json
@@ -99,7 +99,7 @@
                 "bash bin/jwt-keys -e JWT_KEY_PASS_PHRASE"
             ],
             "php-config": [
-                "always_populate_raw_post_data=-1"
+                "always_populate_raw_post_data = -1"
             ]
         },
         "branch-alias": null
