--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         ]
     },
     "require": {
-        "php": "5.6.4",
+        "php": "5.6.x",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^1.0",
@@ -92,9 +92,6 @@
             }
         },
         "paas": {
-            "engines": {
-                "php": "5.6.4"
-            },
             "compile":  [
                 "bash bin/jwt-keys -e JWT_KEY_PASS_PHRASE"
             ],
